# upr-k-backend

./: LICENSE  README.md  manage.py  pyproject.toml
evento/: admin.py  models.py  serializers.py  urls.py  views.py
evento/migrations/: 0001_initial.py
personaje/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
personaje/migrations/: 0001_initial.py
proyecto/: admin.py  models.py  serializers.py  urls.py  views.py
proyecto/migrations/: 0001_initial.py
upr_k_backend/: asgi.py  settings.py  urls.py  wsgi.py
